# Amharic-Text-Processor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
amharic_text_processor/: __init__.py
amharic_text_processor/assets/: AmharicAbbreviations.txt
amharic_text_processor/processors/: __init__.py  abbreviations.py  filters.py  normalize.py  numbers.py  tokenize.py
docs/: index.md  processors.md
tests/: conftest.py  test_pipeline.py  test_processors.py
