[build-system]
requires = ["setuptools>=69", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "amharic-text-processor"
description = "A modular toolkit for cleaning and normalizing Amharic text."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Ethiopic AI", email="contact@ethiopic.ai"},
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["amharic", "text-processing", "Linguistic", "nlp", "ethiopic", "normalization"]
dependencies = [
    "beautifulsoup4>=4.12",
]

[project.urls]
Homepage = "https://github.com/isrish/Amharic-Text-Processor"
Source = "https://github.com/isrish/Amharic-Text-Processor"
Tracker = "https://github.com/isrish/Amharic-Text-Processor/issues"

[tool.setuptools.packages.find]
include = ["amharic_text_processor*"]


[tool.setuptools.package-data]
amharic_text_processor = ["assets/*.txt"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """-rf -s"""

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
wrap-summaries = 112
wrap-descriptions = 108
blank = false
in-place = true
black = true

[tool.mypy]
ignore_missing_imports = true

[tool.unimport]
include = "src"

[tool.pdm]
ignore_package_warnings = ["*"]
